--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -35,9 +35,9 @@
     "message": "その他",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "ブラックリスト",
-    "description": "Blacklist"
+  "navigationExclusions": {
+    "message": "除外リスト",
+    "description": "Exclusions"
   },
   "navigationAbout": {
     "message": "情報",
@@ -62,6 +62,10 @@
   "settingLabelMatchingAlgorithm": {
     "message": "マッチングアルゴリズム",
     "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmCombined": {
+    "message": "組み合わせ",
+    "description": "Combined"
   },
   "settingLabelMatchingAlgorithmStrict": {
     "message": "厳密",
@@ -275,27 +279,27 @@
     "message": "ジェスチャーの実行に必要な最小マウスホイールスクロール量です。",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
+  "exclusionsLabelInformation": {
     "message": "インフォメーション:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
+  "exclusionsTextInformation": {
     "message": "URL マッチパターンを追加することで、特定のウェブサイトで Gesturefy を無効にします。マッチパターンは <scheme>://<host><path> 形式である必要があり、ワイルドカード \"*\" を使用できます。",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
-    "message": "URL マッチパターンを入力",
+  "exclusionsPlaceholderURL": {
+    "message": "URL マッチパターンを入力してください",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
+  "exclusionsAddButton": {
     "message": "追加",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
+  "exclusionsNotificationAlreadyExists": {
     "message": "URL パターンはすでに存在します。",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
+  "exclusionsHintNoEntries": {
     "message": "利用可能なエントリーはありません",
     "description": "No entries available"
   },
@@ -627,6 +631,10 @@
     "message": "リンクの URL をコピー",
     "description": "Copy link URL"
   },
+  "commandLabelCopyImageURL": {
+    "message": "画像の URL をコピー",
+    "description": "Copy image URL"
+  },
   "commandLabelCopyTextSelection": {
     "message": "選択範囲のテキストをコピー",
     "description": "Copy text selection"
@@ -681,7 +689,7 @@
   },
   "commandDescriptionReloadFrame": {
     "message": "ジェスチャーの始点にあるフレームを再読み込みします。",
-    "description": "Reloads the frame where the gesture started."
+    "description": "Reloads the frame on which the gesture started."
   },
   "commandDescriptionStopLoading": {
     "message": "現在のページの読み込みを中止します。",
@@ -833,19 +841,19 @@
   },
   "commandDescriptionOpenImageInNewTab": {
     "message": "ジェスチャーの始点にある画像を新しいタブで開きます。",
-    "description": "Opens the image, where the gesture started, in a new tab."
+    "description": "Opens the image on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewTab": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクを新しいタブで開きます。",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new tab."
+    "description": "Opens either a selected url or the link on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewWindow": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクを新しいウィンドウで開きます。",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new window."
+    "description": "Opens either a selected url or the link on which the gesture started in a new window."
   },
   "commandDescriptionOpenLinkInNewPrivateWindow": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクを新しいプライベートウィンドウで開きます。",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new private window."
+    "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
     "message": "選択されたテキストのウェブ検索を開始します。",
@@ -856,12 +864,12 @@
     "description": "Starts a web search of the clipboard text."
   },
   "commandDescriptionCloseRightTabs": {
-    "message": "右側のすべてのタブを閉じます。",
-    "description": "Closes all tabs to the right side."
+    "message": "現在のタブの右側にあるすべてのタブを閉じます。",
+    "description": "Closes all tabs on the right side of the current tab."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "ピン留めされたタブを除いた左側にあるすべてのタブを閉じます。",
-    "description": "Closes all tabs to the left side, excluding pinned tabs."
+    "message": "現在のタブの左側にある、ピン留めされたタブを除いたすべてのタブを閉じます。",
+    "description": "Closes all tabs on the left side of the current tab except the pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
     "message": "現在のタブとピン留めされたタブを除いたすべてのタブを閉じます。",
@@ -873,11 +881,11 @@
   },
   "commandDescriptionSaveImage": {
     "message": "ジェスチャーの始点にある画像をダウンロードします。",
-    "description": "Downloads the image, where the gesture started."
+    "description": "Downloads the image on which the gesture started."
   },
   "commandDescriptionSaveLink": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクをダウンロードします。",
-    "description": "Downloads either a selected url, or the link where the gesture started."
+    "description": "Downloads either a selected url or the link on which the gesture started."
   },
   "commandDescriptionPrintTab": {
     "message": "印刷ダイアログを表示して現在のページを印刷します。",
@@ -901,7 +909,7 @@
   },
   "commandDescriptionPasteClipboard": {
     "message": "現在クリップボードにあるテキストを、ジェスチャーの始点にある入力要素のキャレット位置に挿入します。",
-    "description": "Inserts the current clipboard text at the caret position of the input element where the gesture started."
+    "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionOpenURLFromClipboard": {
     "message": "クリップボードに URL がある場合は、現在のタブで開きます。",
@@ -917,15 +925,15 @@
   },
   "commandDescriptionOpenLink": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクを開きます。",
-    "description": "Opens either a selected url, or the link where the gesture started."
+    "description": "Opens either a selected url or the link on which the gesture started."
   },
   "commandDescriptionViewImage": {
     "message": "ジェスチャーの始点にある画像を開きます。",
-    "description": "Opens the image where the gesture started."
+    "description": "Opens the image on which the gesture started."
   },
   "commandDescriptionLinkToNewBookmark": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクをブックマークとして保存します。",
-    "description": "Saves either a selected url, or the link where the gesture started, as a bookmark."
+    "description": "Saves either a selected url or the link on which the gesture started as a bookmark."
   },
   "commandDescriptionSaveScreenshot": {
     "message": "ウェブサイトの現在表示されている部分を画像として保存します。",
@@ -937,7 +945,11 @@
   },
   "commandDescriptionCopyLinkURL": {
     "message": "選択された URL またはジェスチャーの始点にあるリンクをクリップボードにコピーします。",
-    "description": "Copies either a selected url, or the link where the gesture started to clipboard."
+    "description": "Copies either a selected url or the link on which the gesture started to clipboard."
+  },
+  "commandDescriptionCopyImageURL": {
+    "message": "ジェスチャーの始点にある画像の URL をクリップボードにコピーします。",
+    "description": "Copies the URL of the image on which the gesture started to clipboard."
   },
   "commandDescriptionCopyTextSelection": {
     "message": "現在選択中のテキストをクリップボードにコピーします。",
@@ -945,7 +957,7 @@
   },
   "commandDescriptionCopyImage": {
     "message": "ジェスチャーの始点にある画像をクリップボードにコピーします。",
-    "description": "Copies the image, where the gesture started, to clipboard."
+    "description": "Copies the image on which the gesture started to clipboard."
   },
   "commandDescriptionViewPageSourceCode": {
     "message": "ページのソースコードを新しいタブで開きます。",
@@ -1058,6 +1070,10 @@
   "commandSettingLabelOpenEmptyTab": {
     "message": "空のタブを開く",
     "description": "Open empty tab"
+  },
+  "commandSettingLabelOpenEmptySearch": {
+    "message": "空のまま検索する",
+    "description": "Open empty search"
   },
   "commandSettingLabelOpenEmptyWindow": {
     "message": "空のウィンドウを開く",
@@ -1231,13 +1247,17 @@
     "message": "URL またはリンクが選択されていない場合に、空のタブを開くかどうかを指定します。",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptySearch": {
+    "message": "テキストが空でも検索を実行するかどうかを指定します",
+    "description": "Determines whether a search should be performed even if no text is present"
+  },
   "commandSettingDescriptionOpenEmptyWindow": {
     "message": "URL またはリンクが選択されていない場合に、空のウィンドウを開くかどうかを指定します。",
     "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "検索するテキストが追加されるカスタム検索 URL です。省略した場合はブラウザー既定の検索エンジンが使用されます。",
-    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
+    "message": "検索エンジンの URL です。検索するテキストは %s プレースホルダー部分に挿入されるか、URL の末尾に追加されます。省略した場合はブラウザーの既定の検索エンジンが使用されます。",
+    "description": "A search engine URL where the search text is either inserted for the %s placeholder or appended to the end. If omitted, the default browser search engine is used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "On の場合は \"名前を付けて保存\" ダイアログを表示します。Off の場合は Firefox の一般設定で指定されたダウンロードフォルダーにダウンロードされます。",
@@ -1445,17 +1465,17 @@
     "message": "キャンセル",
     "description": "Cancel"
   },
+  "lightTheme": {
+    "message": "明るいテーマ",
+    "description": "Light theme"
+  },
   "darkTheme": {
     "message": "暗いテーマ",
     "description": "Dark theme"
   },
-  "whiteTheme": {
-    "message": "明るいテーマ",
-    "description": "White theme"
-  },
-  "defaultTheme": {
-    "message": "既定のテーマ",
-    "description": "Default theme"
+  "highContrastTheme": {
+    "message": "高コントラストテーマ",
+    "description": "High contrast theme"
   },
   "welcomePageUpperSectionReference": {
     "message": "Gesturefy のインストールに成功しました。",
