--- a/src/_locales/es_ES/messages.json
+++ b/src/_locales/es_ES/messages.json
@@ -35,9 +35,9 @@
     "message": "Extras",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "Lista negra",
-    "description": "Blacklist"
+  "navigationExclusions": {
+    "message": "Exclusions",
+    "description": "Exclusions"
   },
   "navigationAbout": {
     "message": "Acerca de",
@@ -62,6 +62,10 @@
   "settingLabelMatchingAlgorithm": {
     "message": "Algoritmo de coincidencia",
     "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmCombined": {
+    "message": "Combined",
+    "description": "Combined"
   },
   "settingLabelMatchingAlgorithmStrict": {
     "message": "Estricto",
@@ -275,28 +279,28 @@
     "message": "El mínimo a desplazar de la rueda del ratón para activar el gesto.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
-    "message": "Información:",
+  "exclusionsLabelInformation": {
+    "message": "Information:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
-    "message": "Añadir patrones URL que desactivarán la función de Gesturefy en determinados sitios. El patrón pueden contener el comodín \"*\" y debe tener el formato <patrón>://<host><dirección>.",
+  "exclusionsTextInformation": {
+    "message": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>.",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
-    "message": "Introduce el patrón URL",
+  "exclusionsPlaceholderURL": {
+    "message": "Enter URL match pattern",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
-    "message": "Añadir",
+  "exclusionsAddButton": {
+    "message": "Add",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
-    "message": "Este patrón URL ya existe.",
+  "exclusionsNotificationAlreadyExists": {
+    "message": "URL pattern already exists.",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
-    "message": "No hay entradas disponibles",
+  "exclusionsHintNoEntries": {
+    "message": "No entries available",
     "description": "No entries available"
   },
   "aboutBackup": {
@@ -627,6 +631,10 @@
     "message": "Copiar URL del enlace",
     "description": "Copy link URL"
   },
+  "commandLabelCopyImageURL": {
+    "message": "Copiar la URL de la imagen",
+    "description": "Copy image URL"
+  },
   "commandLabelCopyTextSelection": {
     "message": "Copiar selección de texto",
     "description": "Copy text selection"
@@ -681,7 +689,7 @@
   },
   "commandDescriptionReloadFrame": {
     "message": "Recargar el marco donde comenzó el gesto.",
-    "description": "Reloads the frame where the gesture started."
+    "description": "Reloads the frame on which the gesture started."
   },
   "commandDescriptionStopLoading": {
     "message": "Detiene la carga de la página actual.",
@@ -833,19 +841,19 @@
   },
   "commandDescriptionOpenImageInNewTab": {
     "message": "Abre la imagen, sobre la que se inicia el gesto, en una nueva pestaña.",
-    "description": "Opens the image, where the gesture started, in a new tab."
+    "description": "Opens the image on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewTab": {
-    "message": "Abre una url seleccionada, o el enlace donde se comenzó el gesto, en una nueva pestaña.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new tab."
+    "message": "Abre una URL seleccionada, o el enlace donde se comenzó el gesto, en una nueva pestaña.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewWindow": {
-    "message": "Abre una url seleccionada, o el enlace donde se comenzó el gesto, en una nueva ventana.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new window."
+    "message": "Abre una URL seleccionada, o el enlace donde se comenzó el gesto, en una nueva ventana.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new window."
   },
   "commandDescriptionOpenLinkInNewPrivateWindow": {
-    "message": "Abre una url seleccionada, o el enlace donde comenzó el gesto, en una nueva ventana privada.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new private window."
+    "message": "Abre una URL seleccionada, o el enlace donde comenzó el gesto, en una nueva ventana privada.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
     "message": "Inicia una búsqueda web del texto seleccionado.",
@@ -856,12 +864,12 @@
     "description": "Starts a web search of the clipboard text."
   },
   "commandDescriptionCloseRightTabs": {
-    "message": "Cierra todas las pestañas de a la derecha.",
-    "description": "Closes all tabs to the right side."
+    "message": "Cierra todas las pestañas al lado derecho de la pestaña actual.",
+    "description": "Closes all tabs on the right side of the current tab."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "Cierra todas las pestañas de al lado izquierdo, excluyendo las pestañas fijadas.",
-    "description": "Closes all tabs to the left side, excluding pinned tabs."
+    "message": "Cierra todas las pestañas al lado izquierdo de la pestaña actual, excepto las pestañas fijadas.",
+    "description": "Closes all tabs on the left side of the current tab except the pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
     "message": "Cierra todas las pestañas excepto la actual y las fijadas.",
@@ -873,11 +881,11 @@
   },
   "commandDescriptionSaveImage": {
     "message": "Descarga la imagen en la que se inició el gesto.",
-    "description": "Downloads the image, where the gesture started."
+    "description": "Downloads the image on which the gesture started."
   },
   "commandDescriptionSaveLink": {
-    "message": "Descarga una url seleccionada, o el enlace donde se comenzó el gesto.",
-    "description": "Downloads either a selected url, or the link where the gesture started."
+    "message": "Descarga una URL seleccionada, o el enlace donde se comenzó el gesto.",
+    "description": "Downloads either a selected url or the link on which the gesture started."
   },
   "commandDescriptionPrintTab": {
     "message": "Imprime la página actual mostrando las opciones de impresión.",
@@ -900,8 +908,8 @@
     "description": "Opens the specified URL in the current tab."
   },
   "commandDescriptionPasteClipboard": {
-    "message": "Inserta el texto actual del portapapeles en la posición del cursor dentro del elemento de entrada donde se comenzó el gesto.",
-    "description": "Inserts the current clipboard text at the caret position of the input element where the gesture started."
+    "message": "Inserta el texto del portapapeles en la posición del cursor dentro del elemento de entrada donde se comenzó el gesto.",
+    "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionOpenURLFromClipboard": {
     "message": "Si el portapapeles contiene una URL, se abrirá en la pestaña actual.",
@@ -916,16 +924,16 @@
     "description": "Opens the Gesturefy settings page."
   },
   "commandDescriptionOpenLink": {
-    "message": "Abre o un enlace seleccionado, o el enlace donde comenzó el gesto.",
-    "description": "Opens either a selected url, or the link where the gesture started."
+    "message": "Abre una URL seleccionada, o el enlace donde se comenzó el gesto.",
+    "description": "Opens either a selected url or the link on which the gesture started."
   },
   "commandDescriptionViewImage": {
     "message": "Abre la imagen donde comenzó el gesto.",
-    "description": "Opens the image where the gesture started."
+    "description": "Opens the image on which the gesture started."
   },
   "commandDescriptionLinkToNewBookmark": {
-    "message": "Añade a marcadores o un enlace seleccionado, o el enlace donde comenzó el gesto.",
-    "description": "Saves either a selected url, or the link where the gesture started, as a bookmark."
+    "message": "Agrega a marcadores la URL seleccionada, o el enlace donde se comenzó el gesto.",
+    "description": "Saves either a selected url or the link on which the gesture started as a bookmark."
   },
   "commandDescriptionSaveScreenshot": {
     "message": "Guarda el área visible actual de una web como una imagen.",
@@ -936,16 +944,20 @@
     "description": "Copies the URL of the current tab to clipboard."
   },
   "commandDescriptionCopyLinkURL": {
-    "message": "Copia la URL seleccionada, o el enlace sobre el que se inició el gesto, en el portapapeles.",
-    "description": "Copies either a selected url, or the link where the gesture started to clipboard."
+    "message": "Copia al portapapeles la URL seleccionada, o el enlace sobre el que se inició el gesto.",
+    "description": "Copies either a selected url or the link on which the gesture started to clipboard."
+  },
+  "commandDescriptionCopyImageURL": {
+    "message": "Copia al portapapeles la URL de la imagen sobre la que se inició el gesto.",
+    "description": "Copies the URL of the image on which the gesture started to clipboard."
   },
   "commandDescriptionCopyTextSelection": {
     "message": "Copia la selección actual del texto en el portapapeles.",
     "description": "Copies the current text selection to clipboard."
   },
   "commandDescriptionCopyImage": {
-    "message": "Copia la imagen sobre la que se inicia el gesto en el portapapeles.",
-    "description": "Copies the image, where the gesture started, to clipboard."
+    "message": "Copia al portapapeles la imagen sobre la que se inició el gesto.",
+    "description": "Copies the image on which the gesture started to clipboard."
   },
   "commandDescriptionViewPageSourceCode": {
     "message": "Se abre una nueva pestaña que contiene el código fuente de la página.",
@@ -1058,6 +1070,10 @@
   "commandSettingLabelOpenEmptyTab": {
     "message": "Abrir pestaña en blanco",
     "description": "Open empty tab"
+  },
+  "commandSettingLabelOpenEmptySearch": {
+    "message": "Open empty search",
+    "description": "Open empty search"
   },
   "commandSettingLabelOpenEmptyWindow": {
     "message": "Abrir ventana vacía",
@@ -1231,13 +1247,17 @@
     "message": "Determina si se debe abrir una nueva pestaña vacía cuando no se ha seleccionado ninguna URL o enlace.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptySearch": {
+    "message": "Determines whether a search should be performed even if no text is present",
+    "description": "Determines whether a search should be performed even if no text is present"
+  },
   "commandSettingDescriptionOpenEmptyWindow": {
     "message": "Determina si se debe abrir una nueva ventana vacía cuando no se ha seleccionado ninguna URL o enlace.",
     "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "Una dirección URL de búsqueda personalizada a la que se añade el texto de búsqueda. Si se omite, se utilizará el motor de búsqueda predeterminado del navegador.",
-    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
+    "message": "A search engine URL where the search text is either inserted for the %s placeholder or appended to the end. If omitted, the default browser search engine is used.",
+    "description": "A search engine URL where the search text is either inserted for the %s placeholder or appended to the end. If omitted, the default browser search engine is used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "Determina si el cuadro de diálogo \"Guardar como\" debe aparecer o el archivo debe ser descargado silenciosamente a la carpeta predeterminada de descargas del usuario.",
@@ -1445,17 +1465,17 @@
     "message": "Cancelar",
     "description": "Cancel"
   },
+  "lightTheme": {
+    "message": "Light theme",
+    "description": "Light theme"
+  },
   "darkTheme": {
     "message": "Tema oscuro",
     "description": "Dark theme"
   },
-  "whiteTheme": {
-    "message": "Tema brillante",
-    "description": "White theme"
-  },
-  "defaultTheme": {
-    "message": "Tema predeterminado",
-    "description": "Default theme"
+  "highContrastTheme": {
+    "message": "High contrast theme",
+    "description": "High contrast theme"
   },
   "welcomePageUpperSectionReference": {
     "message": "Gesturefy se ha instalado correctamente.",
