--- a/src/_locales/ko_KR/messages.json
+++ b/src/_locales/ko_KR/messages.json
@@ -35,9 +35,9 @@
     "message": "부가 기능",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "블랙 리스트",
-    "description": "Blacklist"
+  "navigationExclusions": {
+    "message": "제외",
+    "description": "Exclusions"
   },
   "navigationAbout": {
     "message": "정보",
@@ -62,6 +62,10 @@
   "settingLabelMatchingAlgorithm": {
     "message": "매칭 알고리즘",
     "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmCombined": {
+    "message": "결합됨",
+    "description": "Combined"
   },
   "settingLabelMatchingAlgorithmStrict": {
     "message": "완전한",
@@ -275,27 +279,27 @@
     "message": "제스처가 트리거될 때까지 마우스 휠을 스크롤해야 하는 최소 양",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
+  "exclusionsLabelInformation": {
     "message": "정보:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
+  "exclusionsTextInformation": {
     "message": "URL 일치 패턴을 추가하여 특정 웹 사이트의 Gesturefy 사용을 중지합니다. 일치 패턴은 \"*\" 와일드 카드를 허용하며 <scheme>: // <host> <path> 형식이어야합니다.",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
+  "exclusionsPlaceholderURL": {
     "message": "URL 일치 패턴 입력",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
+  "exclusionsAddButton": {
     "message": "추가",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
+  "exclusionsNotificationAlreadyExists": {
     "message": "URL 패턴이 이미 존재합니다.",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
+  "exclusionsHintNoEntries": {
     "message": "사용 가능한 항목이 없습니다.",
     "description": "No entries available"
   },
@@ -627,6 +631,10 @@
     "message": "링크 URL 복사",
     "description": "Copy link URL"
   },
+  "commandLabelCopyImageURL": {
+    "message": "이미지 URL 복사",
+    "description": "Copy image URL"
+  },
   "commandLabelCopyTextSelection": {
     "message": "텍스트 선택 영역 복사",
     "description": "Copy text selection"
@@ -681,7 +689,7 @@
   },
   "commandDescriptionReloadFrame": {
     "message": "제스처가 시작된 곳의 프레임을 다시 열기",
-    "description": "Reloads the frame where the gesture started."
+    "description": "Reloads the frame on which the gesture started."
   },
   "commandDescriptionStopLoading": {
     "message": "현재 페이지 로드를 중지합니다.",
@@ -832,20 +840,20 @@
     "description": "Decreases a number in the URL."
   },
   "commandDescriptionOpenImageInNewTab": {
-    "message": "새 탭에서, 제스처를 시작하는 곳에 이미지 열기",
-    "description": "Opens the image, where the gesture started, in a new tab."
+    "message": "새 탭에 제스처를 시작하는 곳의 이미지 열기",
+    "description": "Opens the image on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewTab": {
-    "message": "새 탭에, 선택한 링크나 제스처가 시작된 곳의 링크 열기",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new tab."
+    "message": "새 탭에 선택한 링크나 제스처가 시작된 곳의 링크 열기",
+    "description": "Opens either a selected url or the link on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewWindow": {
-    "message": "새 탭에, 선택한 링크나 제스처가 시작된 곳의 링크를 엽니다.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new window."
+    "message": "새 창에 선택한 링크나 제스처가 시작된 곳의 링크 열기",
+    "description": "Opens either a selected url or the link on which the gesture started in a new window."
   },
   "commandDescriptionOpenLinkInNewPrivateWindow": {
-    "message": "새 개인 창에, 선택한 링크나 제스처가 시작된 곳의 링크를 엽니다.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new private window."
+    "message": "새 개인 창에 선택한 Url이나 제스처가 시작된 곳의 링크 열기",
+    "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
     "message": "선택한 텍스트의 웹 검색을 시작합니다.",
@@ -856,12 +864,12 @@
     "description": "Starts a web search of the clipboard text."
   },
   "commandDescriptionCloseRightTabs": {
-    "message": "오른쪽의 모든 탭 닫기",
-    "description": "Closes all tabs to the right side."
+    "message": "현재 탭의 오른쪽에있는 모든 탭 닫기",
+    "description": "Closes all tabs on the right side of the current tab."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "고정된 탭을 제외한 왼쪽의 모든 탭 닫기",
-    "description": "Closes all tabs to the left side, excluding pinned tabs."
+    "message": "고정된 탭을 제외한 현재 탭의 왼쪽에있는 모든 탭 닫기",
+    "description": "Closes all tabs on the left side of the current tab except the pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
     "message": "현재 탭 및 고정된 탭을 제외한 모든 탭 닫기",
@@ -873,11 +881,11 @@
   },
   "commandDescriptionSaveImage": {
     "message": "제스처가 시작된 곳의 이미지를 다운로드합니다.",
-    "description": "Downloads the image, where the gesture started."
+    "description": "Downloads the image on which the gesture started."
   },
   "commandDescriptionSaveLink": {
     "message": "선택한 Url 또는 제스처가 시작된 링크를 다운로드합니다.",
-    "description": "Downloads either a selected url, or the link where the gesture started."
+    "description": "Downloads either a selected url or the link on which the gesture started."
   },
   "commandDescriptionPrintTab": {
     "message": "인쇄 대화 상자를 표시하여 현재 페이지를 인쇄합니다.",
@@ -901,7 +909,7 @@
   },
   "commandDescriptionPasteClipboard": {
     "message": "제스처가 시작된 입력 요소의 캐럿 위치에 현재 클립보드 텍스트를 삽입합니다.",
-    "description": "Inserts the current clipboard text at the caret position of the input element where the gesture started."
+    "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionOpenURLFromClipboard": {
     "message": "클립보드에 URL이 포함된다면, 현재 탭에서 열기",
@@ -916,16 +924,16 @@
     "description": "Opens the Gesturefy settings page."
   },
   "commandDescriptionOpenLink": {
-    "message": "선택한 Url 또는 제스처가 시작된 링크를 엽니다.",
-    "description": "Opens either a selected url, or the link where the gesture started."
+    "message": "선택한 Url 또는 제스처가 시작된 링크를 다운로드합니다.",
+    "description": "Opens either a selected url or the link on which the gesture started."
   },
   "commandDescriptionViewImage": {
-    "message": "제스처가 시작된 곳의 이미지를 엽니다.",
-    "description": "Opens the image where the gesture started."
+    "message": "제스처가 시작된 곳의 이미지 열기",
+    "description": "Opens the image on which the gesture started."
   },
   "commandDescriptionLinkToNewBookmark": {
     "message": "선택한 Url 또는 제스처가 시작된 링크를 북마크로 저장합니다.",
-    "description": "Saves either a selected url, or the link where the gesture started, as a bookmark."
+    "description": "Saves either a selected url or the link on which the gesture started as a bookmark."
   },
   "commandDescriptionSaveScreenshot": {
     "message": "현재 보여지는 웹사이트 영역을 이미지로 저장합니다.",
@@ -937,7 +945,11 @@
   },
   "commandDescriptionCopyLinkURL": {
     "message": "선택한 url 또는 제스처가 시작된 링크를 클립보드에 복사합니다.",
-    "description": "Copies either a selected url, or the link where the gesture started to clipboard."
+    "description": "Copies either a selected url or the link on which the gesture started to clipboard."
+  },
+  "commandDescriptionCopyImageURL": {
+    "message": "제스처가 시작된 곳의 이미지 Url을 클립보드에 복사합니다.",
+    "description": "Copies the URL of the image on which the gesture started to clipboard."
   },
   "commandDescriptionCopyTextSelection": {
     "message": "현재 텍스트 선택 영역을 클립보드에 복사합니다.",
@@ -945,7 +957,7 @@
   },
   "commandDescriptionCopyImage": {
     "message": "제스처가 시작된 곳의 이미지를 클립보드에 복사합니다.",
-    "description": "Copies the image, where the gesture started, to clipboard."
+    "description": "Copies the image on which the gesture started to clipboard."
   },
   "commandDescriptionViewPageSourceCode": {
     "message": "페이지의 소스 코드를 포함하는 새 탭 열기",
@@ -1058,6 +1070,10 @@
   "commandSettingLabelOpenEmptyTab": {
     "message": "빈 탭 열기",
     "description": "Open empty tab"
+  },
+  "commandSettingLabelOpenEmptySearch": {
+    "message": "빈 검색 열기",
+    "description": "Open empty search"
   },
   "commandSettingLabelOpenEmptyWindow": {
     "message": "빈 창 열기",
@@ -1231,13 +1247,17 @@
     "message": "선택된 URL 또는 링크가 없는 경우, 빈 탭을 열 것인지 여부를 결정합니다.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptySearch": {
+    "message": "텍스트가 없어도 검색을 수행할지 여부를 결정합니다.",
+    "description": "Determines whether a search should be performed even if no text is present"
+  },
   "commandSettingDescriptionOpenEmptyWindow": {
     "message": "URL 또는 링크가 선택되지 않은 경우, 빈 창을 열어야 하는지를 결정합니다.",
     "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "검색 텍스트가 추가되는 사용자 정의 검색 URL입니다. 생략하면 기본 브라우저 검색 엔진이 사용됩니다.",
-    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
+    "message": "%s 위치 표시자에 검색 텍스트가 삽입되거나 끝에 추가되는 검색 엔진 URL입니다. 생략하면 기본 브라우저 검색 엔진이 사용됩니다.",
+    "description": "A search engine URL where the search text is either inserted for the %s placeholder or appended to the end. If omitted, the default browser search engine is used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "\"새 이름으로 저장\" 대화 상자를 보일지 또는 파일이 자동으로 사용자 기본 다운로드 폴더에 다운로드할지를 결정합니다.",
@@ -1445,17 +1465,17 @@
     "message": "취소",
     "description": "Cancel"
   },
+  "lightTheme": {
+    "message": "밝은 테마",
+    "description": "Light theme"
+  },
   "darkTheme": {
     "message": "어두운 테마",
     "description": "Dark theme"
   },
-  "whiteTheme": {
-    "message": "테마 쓰기",
-    "description": "White theme"
-  },
-  "defaultTheme": {
-    "message": "기본 테마",
-    "description": "Default theme"
+  "highContrastTheme": {
+    "message": "고대비 테마",
+    "description": "High contrast theme"
   },
   "welcomePageUpperSectionReference": {
     "message": "Gesturefy 설치에 성공했습니다.",
