--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -35,9 +35,9 @@
     "message": "Extra",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "Čierna listina",
-    "description": "Blacklist"
+  "navigationExclusions": {
+    "message": "Výnimky",
+    "description": "Exclusions"
   },
   "navigationAbout": {
     "message": "O doplnku",
@@ -60,15 +60,19 @@
     "description": "middle"
   },
   "settingLabelMatchingAlgorithm": {
-    "message": "Algoritmus párovania",
+    "message": "Algoritmus párovania gesta",
     "description": "Matching algorithm"
   },
+  "settingLabelMatchingAlgorithmCombined": {
+    "message": "Kombinované",
+    "description": "Combined"
+  },
   "settingLabelMatchingAlgorithmStrict": {
-    "message": "Prísne",
+    "message": "Prísny",
     "description": "Strict"
   },
   "settingLabelMatchingAlgorithmShapeIndependent": {
-    "message": "Shape-Independent",
+    "message": "Iba tvar gesta",
     "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
@@ -80,7 +84,7 @@
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Deaktivačný kľúč",
+    "message": "Klávesa pre zrušenie gesta",
     "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
@@ -156,7 +160,7 @@
     "description": "Display update notification"
   },
   "settingDescriptionMouseButton": {
-    "message": "Pokým je stlačené tlačidlo, tak zachytí nové gesto myši.",
+    "message": "Po stlačení tlačidla, zachytí nové gesto myši.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionMatchingAlgorithm": {
@@ -275,27 +279,27 @@
     "message": "Minimálna vzdialenosť, o ktorú musíte pootočiť koliesko myši pre spustenie gesta.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
-    "message": "Informácia:",
+  "exclusionsLabelInformation": {
+    "message": "Informácie:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
+  "exclusionsTextInformation": {
     "message": "Pridajte URL adresy, na ktorých bude rozšírenie Gesturefy zakázané. URL adresa musí byť v tvare <scheme>://<host><path> a pre zástupné znaky môžete použiť hviezdičku (*).",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
+  "exclusionsPlaceholderURL": {
     "message": "Zadajte vzorovú URL adresu",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
+  "exclusionsAddButton": {
     "message": "Pridať",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
-    "message": "Vzorová URL adresa existuje.",
+  "exclusionsNotificationAlreadyExists": {
+    "message": "Vzorová URL adresa už existuje.",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
+  "exclusionsHintNoEntries": {
     "message": "Nie sú dostupné žiadne vstupy",
     "description": "No entries available"
   },
@@ -627,6 +631,10 @@
     "message": "Kopírovať adresu odkazu",
     "description": "Copy link URL"
   },
+  "commandLabelCopyImageURL": {
+    "message": "Kopírovať URL adresu obrázka",
+    "description": "Copy image URL"
+  },
   "commandLabelCopyTextSelection": {
     "message": "Kopírovať vybraný text",
     "description": "Copy text selection"
@@ -680,8 +688,8 @@
     "description": "Reloads the current page."
   },
   "commandDescriptionReloadFrame": {
-    "message": "Znovu načíta rámec, v ktorom ste začali gesto.",
-    "description": "Reloads the frame where the gesture started."
+    "message": "Znovu načíta rámec, v ktorom začalo gesto.",
+    "description": "Reloads the frame on which the gesture started."
   },
   "commandDescriptionStopLoading": {
     "message": "Zastaví načítavanie aktuálnej stránky.",
@@ -808,7 +816,7 @@
     "description": "Moves all tabs to the right of the current tab to a new window."
   },
   "commandDescriptionCloseWindow": {
-    "message": "Zatvorí aktuálne okno.",
+    "message": "Zavrie aktuálne okno.",
     "description": "Closes the current window."
   },
   "commandDescriptionReloadAllTabs": {
@@ -832,20 +840,20 @@
     "description": "Decreases a number in the URL."
   },
   "commandDescriptionOpenImageInNewTab": {
-    "message": "Otvorí obrázok, na ktorom gesto začalo v novej karte.",
-    "description": "Opens the image, where the gesture started, in a new tab."
+    "message": "Otvorí obrázok, na ktorom gesto začalo v novom okne.",
+    "description": "Opens the image on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewTab": {
-    "message": "Tam kde začalo gesto otvorí vybranú URL adresu v novej karte.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new tab."
+    "message": "Otvorí vybranú URL adresu alebo odkaz, na ktorom začalo gesto v novej karte.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new tab."
   },
   "commandDescriptionOpenLinkInNewWindow": {
-    "message": "Tam kde začalo gesto otvorí vybranú URL adresu v novom okne.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new window."
+    "message": "Otvorí vybranú URL adresu alebo odkaz, na ktorom začalo gesto v novom okne.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new window."
   },
   "commandDescriptionOpenLinkInNewPrivateWindow": {
-    "message": "Tam kde začalo gesto otvorí vybranú URL adresu v novom privátnom okne.",
-    "description": "Opens either a selected url, or the link where the gesture started, in a new private window."
+    "message": "Otvorí vybranú URL adresu alebo odkaz, na ktorom začalo gesto v novom súkromnom okne.",
+    "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
     "message": "Spustí vyhľadávanie vybratého textu na webe.",
@@ -856,15 +864,15 @@
     "description": "Starts a web search of the clipboard text."
   },
   "commandDescriptionCloseRightTabs": {
-    "message": "Zatvorí všetky karty na pravej strane od aktuálne karty.",
-    "description": "Closes all tabs to the right side."
+    "message": "Zatvorí všetky karty napravo od aktuálnej karty.",
+    "description": "Closes all tabs on the right side of the current tab."
   },
   "commandDescriptionCloseLeftTabs": {
-    "message": "Zatvorí všetky karty na ľavej strane, okrem pripnutej karty.",
-    "description": "Closes all tabs to the left side, excluding pinned tabs."
+    "message": "Zatvorí všetky karty naľavo od aktuálnej karty okrem pripnutých kariet.",
+    "description": "Closes all tabs on the left side of the current tab except the pinned tabs."
   },
   "commandDescriptionCloseOtherTabs": {
-    "message": "Zatvorí všetky karty, okrem aktuálnej a pripnutých kariet.",
+    "message": "Zavrie všetky karty, okrem aktuálnej a pripnutých kariet.",
     "description": "Closes all tabs except of the current tab and pinned tabs."
   },
   "commandDescriptionSaveTabAsPDF": {
@@ -872,12 +880,12 @@
     "description": "Saves the current page as a pdf file."
   },
   "commandDescriptionSaveImage": {
-    "message": "Tam kde začnete gesto, odtiaľ stiahnete obrázok.",
-    "description": "Downloads the image, where the gesture started."
+    "message": "Stiahne obrázky, na ktorých začne gesto.",
+    "description": "Downloads the image on which the gesture started."
   },
   "commandDescriptionSaveLink": {
-    "message": "Stiahne obsah buď vybranej URL adresy alebo odkazu, kde gesto začalo.",
-    "description": "Downloads either a selected url, or the link where the gesture started."
+    "message": "Stiahne všetky vybrané URL adresy alebo odkazy, na ktorých začalo gesto.",
+    "description": "Downloads either a selected url or the link on which the gesture started."
   },
   "commandDescriptionPrintTab": {
     "message": "Zobrazí dialógové okno pre tlač aktuálnej stránky.",
@@ -900,8 +908,8 @@
     "description": "Opens the specified URL in the current tab."
   },
   "commandDescriptionPasteClipboard": {
-    "message": "Vloží text zo schránky na pozíciu vstupného prvku, z ktorého začalo gesto.",
-    "description": "Inserts the current clipboard text at the caret position of the input element where the gesture started."
+    "message": "Vloží aktuálny text zo schránky na pozíciu vstupného prvku, na ktorom gesto začalo.",
+    "description": "Inserts the current clipboard text at the caret position of the input element on which the gesture started."
   },
   "commandDescriptionOpenURLFromClipboard": {
     "message": "Ak schránka obsahuje URL adresu, tá bude otvorená v aktuálnej karte.",
@@ -916,16 +924,16 @@
     "description": "Opens the Gesturefy settings page."
   },
   "commandDescriptionOpenLink": {
-    "message": "Otvorí buď vybranú URL adresu alebo odkaz, na ktorom gesto začalo.",
-    "description": "Opens either a selected url, or the link where the gesture started."
+    "message": "Otvorí všetky vybrané URL adresy alebo odkazy, na ktorých začalo gesto.",
+    "description": "Opens either a selected url or the link on which the gesture started."
   },
   "commandDescriptionViewImage": {
     "message": "Otvorí obrázok, na ktorom gesto začalo.",
-    "description": "Opens the image where the gesture started."
+    "description": "Opens the image on which the gesture started."
   },
   "commandDescriptionLinkToNewBookmark": {
     "message": "Uloží vybranú URL adresu alebo odkaz, na ktorom gesto začalo ako záložku.",
-    "description": "Saves either a selected url, or the link where the gesture started, as a bookmark."
+    "description": "Saves either a selected url or the link on which the gesture started as a bookmark."
   },
   "commandDescriptionSaveScreenshot": {
     "message": "Uloží momentálne viditeľnú oblasť webstránky ako obrázok.",
@@ -937,15 +945,19 @@
   },
   "commandDescriptionCopyLinkURL": {
     "message": "Skopíruje buď vybranú URL adresu alebo odkaz, na ktorom gesto začalo do schránky.",
-    "description": "Copies either a selected url, or the link where the gesture started to clipboard."
+    "description": "Copies either a selected url or the link on which the gesture started to clipboard."
+  },
+  "commandDescriptionCopyImageURL": {
+    "message": "Skopíruje URL adresu obrázka, na ktorom gesto začalo do schránky",
+    "description": "Copies the URL of the image on which the gesture started to clipboard."
   },
   "commandDescriptionCopyTextSelection": {
     "message": "Skopíruje aktuálne vybraný text do schránky.",
     "description": "Copies the current text selection to clipboard."
   },
   "commandDescriptionCopyImage": {
-    "message": "Skopíruje obrázok, na ktorom gesto začalo do schránky.",
-    "description": "Copies the image, where the gesture started, to clipboard."
+    "message": "Skopíruje do schránky obrázok, na ktorom gesto začalo.",
+    "description": "Copies the image on which the gesture started to clipboard."
   },
   "commandDescriptionViewPageSourceCode": {
     "message": "Otvorí novú kartu obsahujúcu zdrojový kód stránky.",
@@ -1058,6 +1070,10 @@
   "commandSettingLabelOpenEmptyTab": {
     "message": "Otvoriť prázdnu kartu",
     "description": "Open empty tab"
+  },
+  "commandSettingLabelOpenEmptySearch": {
+    "message": "Otvorí prázdne vyhľadávanie",
+    "description": "Open empty search"
   },
   "commandSettingLabelOpenEmptyWindow": {
     "message": "Otvoriť prázdne okno",
@@ -1208,7 +1224,7 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used.",
+    "message": "Kroky priblíženia alebo jeho úrovne v percentách oddelené čiarkami. Ak sú vynechané, použijú sa predvolené úrovne priblíženia rozšírenia Gesturefy.",
     "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
@@ -1231,13 +1247,17 @@
     "message": "Určuje, či má byť otvorená prázdna karta, ak nebola označená žiadna URL adresa alebo odkaz.",
     "description": "Determines if an empty tab should be opened if no URL or link was selected."
   },
+  "commandSettingDescriptionOpenEmptySearch": {
+    "message": "Určuje, či vyhľadávanie má byť vykonané aj bez prítomnosti textu",
+    "description": "Determines whether a search should be performed even if no text is present"
+  },
   "commandSettingDescriptionOpenEmptyWindow": {
     "message": "Určuje, či bude otvorené prázdne okno, ak nebola vybraná žiadna URL adresa alebo odkaz.",
     "description": "Determines if an empty window should be opened if no URL or link was selected."
   },
   "commandSettingDescriptionSearchEngineURL": {
-    "message": "Tu môžete pridať vlastnú URL adresu pre vyhľadávanie vybraného textu. Ak necháte toto pole prázdne, bude použitý predvolený vyhľadávač.",
-    "description": "A custom search URL to which the search text is appended. If omitted, the default browser search engine will be used."
+    "message": "URL adresa vyhľadávača, do ktorej bude vložený text namiesto znaku %s alebo bude pridaná na koniec. Ak zostane vynechaná, bude použitý predvolený vyhľadávač prehliadača.",
+    "description": "A search engine URL where the search text is either inserted for the %s placeholder or appended to the end. If omitted, the default browser search engine is used."
   },
   "commandSettingDescriptionSavePromptDialog": {
     "message": "Určuje, či sa zobrazí dialógové okno pre ukladanie alebo či bude súbor stiahnutý na pozadí do používateľom predvoleného umiestnenia pre sťahované súbory.",
@@ -1368,7 +1388,7 @@
     "description": "Label (optional)"
   },
   "gesturePopupDescriptionCommand": {
-    "message": "Zadajte príkaz, ktorý má byť priradený k tomuto gestu.",
+    "message": "Vyberte príkaz, ktorý má byť priradený k tomuto gestu.",
     "description": "Choose a command that should be assigned to this gesture."
   },
   "gesturePopupDescriptionGestureDirections": {
@@ -1445,17 +1465,17 @@
     "message": "Zrušiť",
     "description": "Cancel"
   },
+  "lightTheme": {
+    "message": "Svetlá téma",
+    "description": "Light theme"
+  },
   "darkTheme": {
     "message": "Tmavá téma",
     "description": "Dark theme"
   },
-  "whiteTheme": {
-    "message": "Svetlá téma",
-    "description": "White theme"
-  },
-  "defaultTheme": {
-    "message": "Predvolená téma",
-    "description": "Default theme"
+  "highContrastTheme": {
+    "message": "Téma s vysokým kontrastom",
+    "description": "High contrast theme"
   },
   "welcomePageUpperSectionReference": {
     "message": "Doplnok Gesturefy bol úspešne nainštalovaný.",
